# JVMC

./: CMakeLists.txt  main.c
ch05/: all_class_headers.h  all_headers.h  cmd.c  cmd.h  header.sh  interpret.c  interpret.h
ch05/classfile/: attr_info.c  attr_info.h  class_file.c  class_file.h  class_reader.c  class_reader.h  common.h  common_classfile_struct.h  constant_pool.c  constant_pool.h  member_info.c  member_info.h
ch05/classpath/: entry.c  entry.h
ch05/instructions/: factory.c  factory.h
ch05/instructions/base/: bytecode_reader.c  bytecode_reader.h  instruction.c  instruction.h
ch05/instructions/comparisons/: cmp.c  cmp.h  if_acmp.c  if_acmp.h  if_icmp.c  if_icmp.h  ifcond.c  ifcond.h
ch05/instructions/constants/: const.c  const.h  ipush.c  ipush.h  ldc.c  ldc.h
ch05/instructions/control/: goto.c  goto.h  lookupswitch.c  lookupswitch.h  return.c  return.h  tableswitch.c  tableswitch.h
ch05/instructions/conversions/: d2x.c  d2x.h  i2x.c  i2x.h
ch05/instructions/extended/: ifnull.c  ifnull.h  wide.c  wide.h
ch05/instructions/loads/: iload.c  iload.h
ch05/instructions/math/: boolean.c  boolean.h  iinc.c  iinc.h  rem.c  rem.h  sh.c  sh.h
ch05/instructions/reference/: invoke.c  invoke.h  new.c  new.h
ch05/instructions/reserved/: invoke_native.c  invoke_native.h
ch05/instructions/stack/: dup.c  dup.h  pop.c  pop.h  swap.c  swap.h
ch05/instructions/stores/: lstore.c  lstore.h
ch05/native/: register.c  register.h
ch05/native/java/lang/: system.c  system.h
ch05/rtda/: common_rtda_struct.h  object.h  thread.c  thread.h
ch05/rtda/heap/: class.c  class.h  object.c  object.h  string_pool.c  string_pool.h
